# behavioural-contracts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  contract.py  exceptions.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-tests.yml
behavioral_contracts/: __init__.py  contract.py  exceptions.py  generator.py  health_monitor.py  models.py  validator.py
behavioural_contracts/: __init__.py  contract.py  exceptions.py  generator.py  health_monitor.py  models.py  temperature.py  validator.py
tests/: __init__.py  test_analyst_contract.py  test_contract.py  test_contract_generation.py  test_health_monitor.py  test_simple_contract.py  test_temperature.py  test_usage.py  test_validator.py
